syntax = "proto3";

package sandwiches;


service Ingredients {
  rpc GetIngredient (IngredientRequest) returns (Ingredient) {}
  rpc GetAllIngredients (AllIngredientsRequest) returns (AllIngredients) {}
}
message IngredientRequest {
  int32 id = 1;
}
message AllIngredientsRequest {
}
message Ingredient {
  string name = 1;
  double price = 2;
  string type = 3;
  int32 id = 4;
}
message AllIngredients {
  repeated Ingredient ingredients = 1;
}


service Recipes {
  rpc GetRecipe (RecipeRequest) returns (Recipe) {}
  rpc GetAllRecipes (AllRecipesRequest) returns (AllRecipes) {}
}
message RecipeRequest {
  int32 id = 1;
}
message AllRecipesRequest {
}
message Recipe {
  string name = 1;
  int32 id = 2;
  int32 bread = 3;
  repeated int32 meats = 4 [packed=true];
  repeated int32 cheeses = 5 [packed=true];
  repeated int32 toppings = 6 [packed=true];
}
message AllRecipes {
  repeated Recipe recipes = 1;
}
